# symobfuscator-deprecated-

./: .gitignore  CODE_OWNERS.TXT  CREDITS.TXT  README.md  README.txt  gitcommit.sh
include/llvm/: CryptoUtils.h  InitializePasses.h
include/llvm/Transforms/BiOpq/: BiOpq.h
lib/Transforms/: CMakeLists.txt  LLVMBuild.txt
lib/Transforms/BiOpq/: BiOpq.cpp  CMakeLists.txt  Utils.cpp
lib/Transforms/IPO/: LLVMBuild.txt  PassManagerBuilder.cpp
lib/Transforms/Obfuscation/: BogusControlFlow.cpp  CMakeLists.txt  CryptoUtils.cpp  LLVMBuild.txt  Makefile  Utils.cpp
lib/Transforms/SymObf/: BoolProg.cpp  BranchProg.cpp  CMakeLists.txt  LLVMBuild.txt  MatrixBranchProg.cpp  SymObf.cpp  Utils.cpp
lib/Transforms/SymObf/matrix/: GenMatPair.cpp  MatGen.cpp  MatUtils.cpp  MatUtils.h  a.out
lib/Transforms/SymObf/mmap/: InstGen.cpp  MMap.cpp  MMap.cpp.back  MMap.cpp~  MMap.h  MathUtils.cpp  MathUtils.h  MillerRabin.cpp  MillerRabin.h  PrimeGen.cpp  a.out  build.sh  test.cpp
lib/Transforms/SymObf/mmap-gmp/: MMap.cpp  MMap.h  MathUtils.cpp  MathUtils.h  a.out  build.sh  test.cpp
lib/Transforms/SymObf/rtlib/: README.txt  matrix.c  matrix.ll  rtlib.c
lib/Transforms/SymObf/toy/: MatGen.cpp  MatGen.ll  a.out  matrix.c  matrix.ll  pf.ll
lib/Transforms/symobf/: BoolProg.cpp  BoolProg.hpp  BranchProg.cpp  BranchProg.hpp  CMakeLists.txt  Logger.hpp  MatrixBranchProg.cpp  MatrixBranchProg.cpp~  MatrixBranchProg.hpp  Taint.cpp  TaintEngine.cpp  TaintEngine.hpp  Utils.cpp  Utils.hpp  extract_syminsts.cpp  taint.cpp
tools/clang/: CMakeLists.txt
tools/lto/: lto.exports
(+20 files in other folders)
